src/test/deca/syntax/invalid/println_variable.synt
println_variable.deca:11: